Environments/BaseTemplate/HAA/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "adminUsername": {
            "type": "String",
            "metadata": {
                "description": "Admin username for VM"
            }
        },
        "adminEmail": {
            "type": "String",
            "metadata": {
                "description": "Admin email for HAA"
            }
        },
        "adminPassword": {
            "type": "String",
            "metadata": {
                "description": "Admin password for VMs"
            }
        },
        "dnsHAA": {
            "defaultValue" : "adminUsername-template",
            "type": "String",
            "metadata": {
                "description": "DNS suffix"
            }
        }
    },
    "variables": {
        "vm-prefix": "[parameters('adminUsername')]",
        "dnsSuffix": "[parameters('dnsHAA')]",
        "location": "[resourceGroup().location]",
        "virtualNetworkName": "dsf-project-test-vnet",
        "addressPrefix": "10.0.0.0/16",
        "subnet1Name": "dsf-project-test-subnet",
        "subnet1Prefix": "10.0.0.0/24",
        "subnet1Ref": "[resourceId('Microsoft.Network/virtualNetworks/subnets',variables('virtualNetworkName'),variables('subnet1Name'))]",
        "RHEL": {
            "publisher": "RedHat",
            "offer": "RHEL",
            "sku": "7-LVM",
            "version": "latest"
        },
        "imageReference": "[variables('RHEL')]",
        "public-ipName": "haa-pip",
        "haa-CSEScript": "http://download.uipath.com/haa/get-haa.sh",
        "haa-CSEScriptFileName": "get-haa.sh",
        "master-nodeVnetID": "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
        "master-nodeSubnetRef": "[concat(variables('master-nodeVnetID'), '/subnets/', variables('subnet1Name'))]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-08-01",
            "name": "haa-nsg",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "description": "Allows SSH traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HAA",
                        "properties": {
                            "description": "Allows HAA traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8443-9443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-04-01",
            "name": "[variables('virtualNetworkName')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', 'haa-nsg')]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnet1Name')]",
                        "properties": {
                            "addressPrefix": "[variables('subnet1Prefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups/', 'haa-nsg')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-04-01",
            "name": "[concat(variables('vm-prefix'),'-master-nic')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[variables('virtualNetworkName')]",
                "[concat('Microsoft.Network/networkSecurityGroups/','haa-nsg')]",
                "[resourceId('Microsoft.Network/publicIPAddresses/', concat(variables('vm-prefix'),'-master-pip'))]"
            ],
            "tags": {
                "displayName": "[concat(variables('vm-prefix'),'-master-nic')]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[variables('subnet1Ref')]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('vm-prefix'),'-master-pip'))]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId(resourceGroup().name,'Microsoft.Network/networkSecurityGroups/', 'haa-nsg')]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-03-01",
            "name": "[variables('vm-prefix')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat(variables('vm-prefix'),'-master-nic')]",
                "[concat('Microsoft.Network/networkSecurityGroups/','haa-nsg')]"
            ],
            "tags": {
                "displayName": "master-node"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2s_v3"
                },
                "osProfile": {
                    "computerName": "[concat(variables('vm-prefix'),'-master')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": "[variables('imageReference')]",
                    "osDisk": {
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId(resourceGroup().name,'Microsoft.Network/networkInterfaces',concat(variables('vm-prefix'),'-master-nic'))]"
                        }
                    ]
                }
            },
            "resources": [
                {
                    "type": "extensions",
                    "apiVersion": "2019-03-01",
                    "name": "master-cse",
                    "location": "[resourceGroup().location]",
                    "dependsOn": [
                        "[resourceId('Microsoft.Compute/virtualMachines', concat(variables('vm-prefix'),'-master'))]"
                    ],
                    "tags": {
                        "displayName": "master-cse"
                    },
                    "properties": {
                        "publisher": "Microsoft.Azure.Extensions",
                        "type": "CustomScript",
                        "typeHandlerVersion": "2.0",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "fileUris": [
                                "[variables('haa-CSEScript')]"
                            ],
                            "commandToExecute": "[concat('sh ', variables('haa-CSEScriptFileName'),' -u ', parameters('adminEmail'),' -p ',parameters('adminPassword'))]"
                        }
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-04-01",
            "name": "[concat(variables('vm-prefix'),'-master-pip')]",
            "location": "[variables('location')]",
            "dependsOn": [],
            "tags": {
                "displayName": "master-node-pip"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "[variables('dnsSuffix')]"
                }
            }
        }
    ]
}
